[package]
name = "helium_asm_macros"
description = "This crate holds the macros for helium_asm"
version = "0.1.0"
edition = "2021"

authors = ["CoffeeLink <coffee@coffeelink.hu>"]
repository = "https://github.com/CoffeeLink/helium_asm"

license = "GPL-3"

readme = "../readme.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.81"
